--- a/asynchronous/easyhttp-lib/using-ajax/index.html
+++ b/asynchronous/easyhttp-lib/using-ajax/index.html
@@ -1,13 +1,14 @@
 <!DOCTYPE html>
 <html lang="en">
-    <head>
-        <meta charset="UTF-8">
-        <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>Easy http lib</title>
-    </head>
-    <body>
-        <h1>Easy http</h1>
-        <script src="easyhttp.js"></script>
-        <script src="app.js"></script>
-    </body>
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Easy http lib</title>
+  </head>
+  <body>
+    <h1>Easy http</h1>
+    <!-- <script src="easyhttp.js"></script> -->
+    <script src="easyhttp-new.js"></script>
+    <script src="app-new.js"></script>
+  </body>
 </html>
