--- a/asynchronous/easyhttp-lib/using-ajax/index.html
+++ b/asynchronous/easyhttp-lib/using-ajax/index.html
@@ -7,7 +7,8 @@
   </head>
   <body>
     <h1>Easy http</h1>
-    <!-- <script src="easyhttp.js"></script> -->
+    <!-- <script src="easyhttp.js"></script>
+    <script src="app.js"></script> -->
     <script src="easyhttp-new.js"></script>
     <script src="app-new.js"></script>
   </body>
