async-await scripts with fetch api

--- a/asynchronous/aync-await/index.html
+++ b/asynchronous/aync-await/index.html
@@ -7,7 +7,7 @@
     </head>
     <body>
         <!-- <script src="async.js"></script> -->
-        <script src="async-await.js"></script>
-        <!-- <script src="async-await-with-fetch.js"></script> -->
+        <!-- <script src="async-await.js"></script> -->
+        <script src="async-await-with-fetch.js"></script>
     </body>
 </html>
